[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Player2.gd" type="Script" id=1]
[ext_resource path="res://SpriteFrames/PlayerFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://images/RadialGradient.png" type="Texture" id=3]
[ext_resource path="res://TestOccluder.tres" type="OccluderPolygon2D" id=4]
[ext_resource path="res://sounds/hurt.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/shot.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Gradient" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.631373, 0.0392157, 0.588235 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.588235 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 16, 10 )
z_index = 1
collision_layer = 3
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = ExtResource( 2 )

[node name="BloodHit" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 0.93
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.92
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
initial_velocity_random = 0.8
scale_amount = 5.0
scale_amount_random = 0.8
color = Color( 1, 0.0941176, 0.0941176, 1 )

[node name="Gunshot" type="Node2D" parent="."]
material = SubResource( 2 )
position = Vector2( 6, -16 )

[node name="ShotParticles" type="CPUParticles2D" parent="Gunshot"]
use_parent_material = true
position = Vector2( -1, 0 )
emitting = false
amount = 10
lifetime = 0.05
one_shot = true
explosiveness = 0.85
lifetime_randomness = 0.41
local_coords = false
draw_order = 1
emission_shape = 1
emission_sphere_radius = 0.41
direction = Vector2( 0, -1 )
spread = 27.6
gravity = Vector2( 0, -100 )
initial_velocity = 250.0
damping = 76.64
scale_amount = 6.0
scale_amount_random = 0.5
color = Color( 1, 0.87451, 0.384314, 1 )

[node name="Line2D" type="Line2D" parent="Gunshot"]
modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
points = PoolVector2Array( 0, 0, 0, -425 )
width = 3.0
default_color = Color( 1, 0.894118, 0.4, 1 )
gradient = SubResource( 3 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Light2D" type="Light2D" parent="Gunshot"]
scale = Vector2( 1.84375, 1.84375 )
texture = ExtResource( 3 )
texture_scale = 2.5
color = Color( 1, 0.921569, 0.0666667, 0 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.635294 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Gunshot"]
position = Vector2( -15, 7 )
occluder = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="Gunshot"]
enabled = true
cast_to = Vector2( 0, -425 )
collision_mask = 5

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar" type="Node2D" parent="."]
light_mask = 4

[node name="Bar" type="ProgressBar" parent="HealthBar"]
light_mask = 4
margin_left = -17.0
margin_top = -19.0
margin_right = 17.0
margin_bottom = -15.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 1.0
value = 1.0
percent_visible = false

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GunshotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 6.69
